@@ -15,6 +15,7 @@ Revision history for Perl extension Net::SSLeay.
      Fix an use-after-free error. Patch from Lubomir Rintel.
      Fixed a problem with  Invalid comparison on OBJ_cmp result in
      t/local/36_verify.t. Contributed by paul.
+     Added suport for get_peer_cert_chain(). Patch by Markus Benning.
 
 
 1.55 2013-06-08
